--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@solana/spl-token": "^0.4.13",
+    "@solana/web3.js": "^1.98.2",
+    "browserify": "^17.0.1",
+    "bs58": "^6.0.0",
+    "buffer": "^6.0.3",
+    "vite-plugin-node-polyfills": "^0.24.0",
     "vue": "^3.2.45"
   },
   "devDependencies": {
